# cowsay

./: .gitignore  Cargo.toml  LICENSE  README  README.md  build.rs  wapm.toml  wasmer.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: assets.rs  assets.rs.bk  lib.rs  main.rs  main.rs.bk
src/cows/: sheep.cow
