[package]
name = "cowsay"
version = "0.1.0"
authors = ["Syrus Akbary <syrus@wasmer.io>"]

[dependencies]
clap = "2.32.0"
rand = "~0.3"
include_dir="0.2.1"

# [[bin]]
# name = "cowsay"
# path = "src/main.rs"

# [[bin]]
# name = "cowthink"
# path = "src/main.rs"

# [source]

# [source.same-file]
# directory = "./same-file"
