[package]
name = "cowsay"
version = "0.1.0"
authors = ["Syrus Akbary <syrus@wasmer.io>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
rand = "~0.8"
include_dir="0.2.1"
wee_alloc = "*"
unicode-segmentation = "1.7"
unicode-width = "0.1"

[profile.release]
lto="fat"
opt-level =  "s"
codegen-units = 1

# [[bin]]
# name = "cowsay"
# path = "src/main.rs"

# [[bin]]
# name = "cowthink"
# path = "src/main.rs"

# [source]

# [source.same-file]
# directory = "./same-file"
